# potential-train

./: .gitignore  Dockerfile  README.md  categories.json  docker-compose.swarm.yml  docker-compose.yml
docker/: Dockerfile  docker_run_git.sh  wait-for-it.sh
docker/db/phpadmin-backups/: prestashop.sql
docker/ssl/: 000-default.conf
docker/ssl/apache2/: 000-default.conf  ssl.sh
docker/ssl/sql/: ssl.sh  ssl_db.sql
parser/: categories_labels.json  data_labels.json  json  main.py  products_labels.json  utils.py
scrapper/: .gitignore  categories.json  categories.py  main.py  pyproject.toml  scrapping_functions.py
scripts/: init-db.sh  ssl.sh
src/: robots.txt
src/admin-panel/import/: 20221207124820-categories_import.csv  20221207125320-products_import.csv  20221207125634-products_import.csv  20221207140052-products_import.csv  20230124135236-categories_import.csv  20230124135300-20221207124857-products_import.csv  20230124135325-products_import.csv  20230125142646-products_import.csv  20230125144219-combinations_sample.csv  20230125144707-combinations_sample.csv  20230125154916-products_import.csv
src/app/config/: parameters.php
src/mails/en/: account.html  account.txt  backoffice_order.html  backoffice_order.txt  cheque.html  cheque.txt  contact.html  contact.txt  contact_form.txt  credit_slip.html  credit_slip.txt  download_product.html  download_product.txt  employee_password.txt  forward_msg.html  guest_to_customer.txt  import.txt  in_transit.html  in_transit.txt  log_alert.html  log_alert.txt  newsletter.html  (+24 more)
website-tests/: main.py  pyproject.toml
(+251 files in other folders)
