[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["qaziok <72215548+qaziok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
