[tool.poetry]
name = "website-tests"
version = "0.1.0"
description = ""
authors = ["qaziok <72215548+qaziok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
webdriver-manager = "^3.8.5"
selenium = "^4.7.2"
faker = "^16.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
